--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> hack your life </title>
+    <title> introduction </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>hack your life Source of Free Bootstrap Themes</strong>
+              <strong>About ME</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="text-faded mb-5">이제부터 저의 소개를 해볼까 합니다! 저는 현재 경기도 수원시 영통구 영통동에 거주하고 있습니다. 현재 정보통신공학을 전공하고 있으며 임베이드 시스템쪽으로 공부를 할 예정입니다.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -75,9 +75,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">여행</h2>
+            <h2 class="section-heading text-white">DREAM?</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded mb-4">자동차의 안전기술과 안전장치에 대해 개발하고 싶어 진로의 방향을 쉽게 정하게 되었습니다. 자동차의 안전기술과 안전장치에 대해 개발하고 싶어 진로의 방향을 쉽게 정하게 되었습니다!</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">At Your Servi</h2>
             <hr class="my-4">
           </div>
         </div>
