--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Servi</h2>
+            <h2 class="section-heading">My Future</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -97,30 +97,30 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-car text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Job</h3>
+              <p class="text-muted mb-0">원하는 직업을 갖고</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-group text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Travel</h3>
+              <p class="text-muted mb-0">다양한 나라를 돌아다니며</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-money text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Property</h3>
+              <p class="text-muted mb-0">재정에 문제없이</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-soccer-ball-o text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Hobby</h3>
+              <p class="text-muted mb-0">해외 축구를 보며 즐기는</p>
             </div>
           </div>
         </div>
